--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,8 @@
-.container{
+*{
     margin: 0 auto;
     width: fit-content;
 }
 
 h1{
-    background-color: brown;
+    background-color: rgb(42, 165, 108);
 }
