--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <form action="/predict" method="post">
             <p>Largura da pétala: <input type="text" name="larg_petala" id="" value="0.13"></p>
             <p>Comprimento da pétala: <input type="text" name="comp_petala" id="" value="0.41"></p>
-            <p>Largura da sépala: <input type="text" name="" id="larg_sepala" value="0.28"></p>
+            <p>Largura da sépala: <input type="text" name="larg_sepala" id="" value="0.28"></p>
             <p>Comprimento da sépala: <input type="text" name="comp_sepala" id="" value="0.57"></p>
             <p><input type="submit" value="Enviar"></p>
         </form>
